Improve tests and reach 90% coverage
